--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "xoauth2": "*"
   },
   "devDependencies": {
-    "nodeunit": "*",
+    "nodeunit": "0.9.0",
     "hoodiecrow-imap": "*"
   },
   "scripts": {
