rollback to c3f8b11f749e47d5d2637dedd854980eaa1bb34f

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "xoauth2": "*"
   },
   "devDependencies": {
-    "nodeunit": "0.9.0",
+    "nodeunit": "*",
     "hoodiecrow-imap": "*"
   },
   "scripts": {
